# wifi-densepose

monitoring/: alerting-rules.yml
rust-port/wifi-densepose-rs/: Cargo.toml
rust-port/wifi-densepose-rs/crates/wifi-densepose-care/: Cargo.toml
rust-port/wifi-densepose-rs/crates/wifi-densepose-care/src/: lib.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-care/src/alerting/: mod.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-care/src/api/: mod.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-care/src/detection/: activity.rs  care_monitor.rs  emergency.rs  fall.rs  mod.rs  sleep.rs  vitals.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-care/src/domain/: care_event.rs  mod.rs  person_state.rs  room.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-sensing-server/: Cargo.toml
rust-port/wifi-densepose-rs/crates/wifi-densepose-sensing-server/src/: main.rs
ui/: care.html  home.html  index.html
ui/mobile/src/navigation/: MainTabs.tsx  types.ts
ui/mobile/src/screens/CareScreen/: index.tsx
