[package]
name = "wifi-densepose-care"
version = "0.1.0"
edition = "2021"
description = "Disability care monitoring: fall detection, presence, vitals, activity, emergency, sleep"
license = "MIT"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
